This controls whether or not the last screen line of the text being
measured will be counted for the purpose of calculating the text
dimensions.

+++
** 'window-text-pixel-size' understands a new meaning of 'from'.
Specifying a cons as the from argument allows to start measuring text
from a specified amount of pixels above or below a position.

** XDG support

*** New function 'xdg-state-home' returns 'XDG_STATE_HOME' environment variable.
This new location, introduced in the XDG Base Directory Specification
version 0.8 (8th May 2021), "contains state data that should persist
between (application) restarts, but that is not important or portable
enough to the user that it should be stored in $XDG_DATA_HOME".

+++
** New macro 'with-delayed-message'.
This macro is like 'progn', but will output the specified message if
the body takes longer to execute than the specified timeout.

---
** New function 'funcall-with-delayed-message'.
This function is like 'funcall', but will output the specified message
if the function takes longer to execute than the specified timeout.

** Locale

---
*** New variable 'current-locale-environment'.
This holds the value of the previous call to 'set-locale-environment'.

---
*** New macro 'with-locale-environment'.
This macro can be used to change the locale temporarily while
executing code.

** Tabulated List Mode

+++
*** A column can now be set to an image descriptor.
The 'tabulated-list-entries' variable now supports using an image
descriptor, which means to insert an image in that column instead of
text.  See the documentation string of that variable for details.

+++
** :keys in 'menu-item' can now be a function.
If so, it is called whenever the menu is computed, and can be used to
calculate the keys dynamically.

+++
** New major mode 'clean-mode'.
This is a new major mode meant for debugging.  It kills absolutely all
local variables and removes overlays and text properties.

+++